--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
 					return false;
 				}
 			</script>
+		          <script>
+			    function jump(p){
+			      console.log(p);
+			      document.getElementById("place").style.backgroundImage = "url("+p+")";
+			      console.log(document.getElementById("place").style.backgroundImage);
+			    }
+          </script>
 
 	</body>
 </html>
