--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 		          <script>
 			    function jump(p){
 			      console.log(p);
-			      document.getElementById("place").style.backgroundImage = "url("+p+")";
-			      console.log(document.getElementById("place").style.backgroundImage);
+			      document.getElementById("wrapper").style.backgroundImage = "url("+p+")";
+			      console.log(document.getElementById("wrapper").style.backgroundImage);
 			    }
           </script>
 
