--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+			<div id="wrapper" style="background-size:cover">
 
 				<!-- Main -->
 					<section id="main">
